# drf-account-viewset

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
server/: pytest.ini
server/api/: admin.py  api.py  decorators.py  external.py  models.py  serializers.py  urls.py  views.py
server/api/migrations/: 0001_initial.py  0002_alter_bankaccount_account_number.py
server/api/tests/: test_external.py  test_models.py  test_serializers.py
server/server/: settings.py  urls.py
server/tests/: conftest.py  test_api.py
