[project]
name = "django_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "daphne>=4.2.1",
    "django>=6.0.4",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "mysqlclient>=2.2.8",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "uvicorn>=0.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "web.settings"
testpaths = ["tests"]
